[package]
name = "axoplotl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csscolorparser = "0.5"
open = "2.1"
chrono = "0.4"
image = "0.24"
base64 = "0.13"
colorgrad = "0.5"

[profile.dev.package."*"]
opt-level = 2